--- a/core/templates/blog/post_list.html
+++ b/core/templates/blog/post_list.html
@@ -16,7 +16,7 @@
      {% for post in posts %}
      {# Each "contact" is a Contact model object. #}
    <a href="{%url 'blog:post-detail' pk=post.id%}"> {{ post.title|upper }}-{{post.id}}<a/> 
-     
+   <a href="{%url 'blog:post-edit' pk=post.id%}"> <h5>Edit</h5> </a>
  {% endfor %}
  
  <div class="pagination">
